Table configuraciones {
    id int [pk,increment] //Primary key
    nombre varchar
    descripcion varchar 
    direccion varchar
    telefono varchar
    divisa varchar
    correo_elctronico varchar
    web varchar
    logo varchar
}
Table gestiones {
    id int [pk, increment]
    nombre varchar
}
Table periodos {
    id int [pk, increment]
    nombre varchar
    gestion_id int [ref: > gestiones.id]
    
}
Table niveles {
    id int [pk, increment]
    nombre varchar
}
Table grados {
    id int [pk, increment]
    nombre varchar
    nivel_id int [ref: > niveles.id]
}
Table Paralelos {
    id int [pk, increment]
    nombre varchar
    grado_id int [ref: > grados.id]
}
Table turnos {
    id int [pk, increment]
    nombre varchar
}
Table materias {
    id int [pk, increment]
    nombre varchar
}
